dataset1235/2025-2/2947369575/users/3291858379/executions/1003782500_1626817775.log
== RUN (2025-08-27 19:44:35)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r ** 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
digite o valor do raio (r):
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
digite o valor do raio (r):
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
digite o valor do raio (r):
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
digite o valor do raio (r):
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
digite o valor do raio (r):
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
digite o valor do raio (r):
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:46:58)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r** 2)
volume_esfera = (4/3) * math.pi * (r** 3)
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:47:05)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r** 2)
volume_esfera = (4/3) * math.pi * (r** 3)
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:47:17)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r** 2)
volume_esfera = (4/3) * math.pi * (r** 3)
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:41:53)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
digite o valor do raio (r):
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
digite o valor do raio (r):
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
digite o valor do raio (r):
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
digite o valor do raio (r):
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
digite o valor do raio (r):
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
digite o valor do raio (r):
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:47:14)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r** 2)
volume_esfera = (4/3) * math.pi * (r** 3)
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:45:11)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r ** 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
digite o valor do raio (r):
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
digite o valor do raio (r):
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
digite o valor do raio (r):
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
digite o valor do raio (r):
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
digite o valor do raio (r):
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
digite o valor do raio (r):
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:46:59)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r** 2)
volume_esfera = (4/3) * math.pi * (r** 3)
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:47:10)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r** 2)
volume_esfera = (4/3) * math.pi * (r** 3)
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:44:50)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area circulo = math.pi * (r ** 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    area circulo = math.pi * (r ** 2)
         ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    area circulo = math.pi * (r ** 2)
         ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    area circulo = math.pi * (r ** 2)
         ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    area circulo = math.pi * (r ** 2)
         ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    area circulo = math.pi * (r ** 2)
         ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    area circulo = math.pi * (r ** 2)
         ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:18:17)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r** 2)
volume_esfera = (4.0 / 3.0) * math.pi * (r** 3)
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:38:54)
-- CODE: 
import math
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
None
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
None
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
None
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
None
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
None
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:47:13)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r** 2)
volume_esfera = (4/3) * math.pi * (r** 3)
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:47:11)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r** 2)
volume_esfera = (4/3) * math.pi * (r** 3)
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:51:36)
-- CODE: 
import math
r = float(input("digite o valor do raio (r): "))
area_circulo = math.pi * (r ** 2)
volume_esfera = (4.0 / 3.0) * math.pi * (r** 3)
print("area do circulo: ", round(area_circulo, 3))
print("volume da esfera: ", round(volume_esfera, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
volume da esfera:  0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
volume da esfera:  381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
volume da esfera:  7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
volume da esfera:  5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
volume da esfera:  1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
volume da esfera:  33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
